--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "build:css": "postcss public/styles/tailwind.css -o public/styles/style.css",
+    "watch:css": "postcss public/styles/tailwind.css -o public/styles/style.css --watch",
     "devStart": "nodemon ./bin/www"
   },
   "dependencies": {
@@ -15,11 +16,12 @@
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "postcss": "^8.4.36",
-    "postcss-cli": "^11.0.0",
     "pug": "2.0.0-beta11",
     "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "postcss-cli": "^11.0.0",
+    "postcss-watch": "^0.1.1"
   }
 }
