--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "autoprefixer": "^10.4.18",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "ejs": "^3.1.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "postcss": "^8.4.36",
-    "pug": "2.0.0-beta11",
     "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
