--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,14 @@
-{
-    "version": 2,
+{ 
     "builds": [
-      {
-        "src": "bin/www",
-        "use": "@vercel/node"
-      }
+        {
+            "src": "/index.js",
+            "use": "@vercel/node"
+        }
     ],
     "routes": [
-      { "handle": "filesystem" }
+        {
+            "src": "/(.*)",
+            "dest": "/index.js"
+        }
     ]
-  }
-  
+}
